updated segment output
