# backend/swagger_server/models/track_loc.py
@@ -1,94 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class TrackLoc(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, type: str=None, coordinates: List[List[float]]=None):  # noqa: E501
-        """TrackLoc - a model defined in Swagger
-
-        :param type: The type of this TrackLoc.  # noqa: E501
-        :type type: str
-        :param coordinates: The coordinates of this TrackLoc.  # noqa: E501
-        :type coordinates: List[List[float]]
-        """
-        self.swagger_types = {
-            'type': str,
-            'coordinates': List[List[float]]
-        }
-
-        self.attribute_map = {
-            'type': 'type',
-            'coordinates': 'coordinates'
-        }
-        self._type = type
-        self._coordinates = coordinates
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'TrackLoc':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Track_loc of this TrackLoc.  # noqa: E501
-        :rtype: TrackLoc
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def type(self) -> str:
-        """Gets the type of this TrackLoc.
-
-
-        :return: The type of this TrackLoc.
-        :rtype: str
-        """
-        return self._type
-
-    @type.setter
-    def type(self, type: str):
-        """Sets the type of this TrackLoc.
-
-
-        :param type: The type of this TrackLoc.
-        :type type: str
-        """
-        allowed_values = ["LineString"]  # noqa: E501
-        if type not in allowed_values:
-            raise ValueError(
-                "Invalid value for `type` ({0}), must be one of {1}"
-                .format(type, allowed_values)
-            )
-
-        self._type = type
-
-    @property
-    def coordinates(self) -> List[List[float]]:
-        """Gets the coordinates of this TrackLoc.
-
-
-        :return: The coordinates of this TrackLoc.
-        :rtype: List[List[float]]
-        """
-        return self._coordinates
-
-    @coordinates.setter
-    def coordinates(self, coordinates: List[List[float]]):
-        """Sets the coordinates of this TrackLoc.
-
-
-        :param coordinates: The coordinates of this TrackLoc.
-        :type coordinates: List[List[float]]
-        """
-
-        self._coordinates = coordinates
